--- a/src/assets/sass/website/components/work/work-details.scss
+++ b/src/assets/sass/website/components/work/work-details.scss
@@ -13,6 +13,26 @@
     width: 90%;
   }
   &__section {
-    margin: 20px 0 60px 0;
+    padding: 2% 0 0;
+    &:last-child {
+      padding: 2% 0 2%;
+    }
+  }
+}
+.service-details-sections {
+  width: 96%;
+  margin: auto;
+  color: $header-item;
+  @include is-extra-small-mobile {
+    width: 90%;
+  }
+  @include is-mobile {
+    width: 90%;
+  }
+  &__section {
+    padding: 2% 0 0;
+    &:last-child {
+      padding: 2% 0 2%;
+    }
   }
 }
