--- a/src/assets/sass/website/shared/custom-half-clipped/clipped-frame.scss
+++ b/src/assets/sass/website/shared/custom-half-clipped/clipped-frame.scss
@@ -6,7 +6,7 @@ $shape-width: 60%;
 $shape-height: 100%;
 
 .top-clip-container {
-  margin: 100px 0px -1px 0px;
+  // margin: 100px 0px -1px 0px;
   height: 100px;
   width: 100%;
   display: flex;
