--- a/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
+++ b/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
@@ -13,9 +13,18 @@
   background-color: $accent;
 }
 .work-details-sections {
+  &__wrapper {
+    border-radius: 10px;
+    background-color: $form-background;
+    padding: 30px;
+    @include is-extra-small-mobile {
+      padding: 10px;
+    }
+    @include is-mobile {
+      padding: 10px;
+    }
+  }
   &__container {
-    background-color: $primary;
-    padding: 0 110px 0 110px;
     @include is-extra-small-mobile {
       padding: 0 20px 0 20px;
     }
@@ -31,13 +40,13 @@
   }
   &__title {
     position: relative;
-    color: $accent;
+    color: white;
     font-family: Arial;
     font-weight: bold;
     text-align: left;
     font-size: 2.3rem;
     height: 65px;
-    margin-bottom: 35px;
+    // margin-bottom: 35px;
     @include is-extra-small-mobile {
       font-size: 1.1rem;
     }
@@ -50,33 +59,33 @@
     @include is-desktop {
       font-size: 2rem;
     }
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      top: 60px;
-      left: 0px;
-      height: 5px;
-      width: 220px;
-      background: $accent;
-      transition: all 0.5s ease-in-out;
-      @include is-extra-small-mobile {
-        top: 40px;
-        width: 150px;
-      }
-      @include is-mobile {
-        top: 50px;
-        width: 180px;
-      }
-      @include is-tablet {
-        top: 50px;
-        width: 200px;
-      }
-      @include is-desktop {
-        top: 50px;
-        width: 150px;
-      }
-    }
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   bottom: 0;
+    //   top: 60px;
+    //   left: 0px;
+    //   height: 5px;
+    //   width: 220px;
+    //   background: $accent;
+    //   transition: all 0.5s ease-in-out;
+    //   @include is-extra-small-mobile {
+    //     top: 40px;
+    //     width: 150px;
+    //   }
+    //   @include is-mobile {
+    //     top: 50px;
+    //     width: 180px;
+    //   }
+    //   @include is-tablet {
+    //     top: 50px;
+    //     width: 200px;
+    //   }
+    //   @include is-desktop {
+    //     top: 50px;
+    //     width: 150px;
+    //   }
+    // }
   }
   &__title-normal {
     position: relative;
@@ -102,7 +111,9 @@
   }
   &__video {
     height: 100%;
+    padding: 10px;
     video {
+      border: 2px solid black;
       height: 100%;
       object-fit: cover;
       &:focus {
@@ -112,6 +123,10 @@
     iframe {
       min-height: 300px;
     }
+  }
+  &__image {
+    border: 2px solid black;
+    margin: 10px;
   }
   &__slider {
     display: flex;
@@ -124,7 +139,7 @@
     max-height: $template-height/1.25;
     overflow-y: auto;
     line-height: 40px;
-    padding: 20px 20px 0 20px;
+    // padding: 20px 20px 0 20px;
     @include is-extra-small-mobile {
       font-size: 0.8rem;
       max-height: $template-height/2;
