--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -1,4 +1,5 @@
 @import "./color-palette.scss";
+@import "./mixins.scss";
 
 html,
 body {
@@ -27,6 +28,15 @@ body {
   height: 100%;
   width: 70%;
   margin: 0 auto;
+  &__admin {
+    width: 100% !important;
+  }
+  @include is-extra-small-mobile {
+    width: 100%;
+  }
+  @include is-mobile {
+    width: 100%;
+  }
 }
 .vue-notifyjs.notifications {
   .list-move {
