--- a/src/assets/sass/website/components/about/about-clients.scss
+++ b/src/assets/sass/website/components/about/about-clients.scss
@@ -5,15 +5,21 @@
 .about-clients-wrapper {
   width: 80%;
   margin: auto;
+  @include is-mobile {
+    margin-top: 0;
+  }
+  @include is-extra-small-mobile {
+    margin-top: 0;
+  }
   &__inside {
     // padding-bottom: 150px;
 
     .clients-header {
       @include is-mobile {
-        margin: 100px 0 100px 0;
+        margin: 0 0 50px 0;
       }
       @include is-extra-small-mobile {
-        margin: 100px 0 100px 0;
+        margin: 0 0 50px 0;
       }
       h1 {
         font-family: "Arial Bold";
@@ -24,9 +30,11 @@
         margin-left: 30px;
         @include is-mobile {
           font-size: 2rem;
+          margin-top: 0;
         }
         @include is-extra-small-mobile {
           font-size: 2rem;
+          margin-top: 0;
         }
       }
     }
@@ -46,6 +54,12 @@
         :last-child {
           display: block;
         }
+      }
+      @include is-mobile {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      @include is-extra-small-mobile {
+        grid-template-columns: 1fr 1fr 1fr;
       }
     }
   }
