--- a/src/assets/sass/website/components/contact/contact-data-box.scss
+++ b/src/assets/sass/website/components/contact/contact-data-box.scss
@@ -8,25 +8,14 @@
     height: 40px;
 
     @include is-extra-small-mobile {
-      margin-top: 6%;
+      margin-top: 15%;
+      height: 20px;
     }
     @include is-mobile {
-      margin-top: 5%;
-    }
-
-    @include is-tablet {
-      margin-top: 10%;
-    }
-
-    @include is-desktop {
       margin-top: 15%;
+      height: 20px;
     }
-    @include is-large-desktop {
-      margin-top: 3%;
-    }
-    @include is-extra-large-desktop {
-      margin-top: 30%;
-    }
+
     img {
       max-width: 100px;
       height: 100%;
@@ -38,7 +27,8 @@
     font-size: 2rem;
     margin: 5% 0 0 0;
     @include is-extra-small-mobile {
-      margin: 5% 0;
+      font-size: 1.2rem;
+      margin: 1% 0;
     }
   }
   &__details {
@@ -61,9 +51,7 @@ $widths-and-heights: (
   clipped-shape-width-xs: (
     $width + 5vw
   ) * 3,
-  clipped-shape-height-xs: (
-    $height + 10vw
-  ) * 2,
+  clipped-shape-height-xs: $height + 10vw,
   clipped-length-xs: $clipped-length,
   clipped-shape-width-sm: (
     $width + 5vw
