--- a/src/assets/sass/website/components/contact/form-container.scss
+++ b/src/assets/sass/website/components/contact/form-container.scss
@@ -1,4 +1,5 @@
 @import "../../color-palette.scss";
+@import "../../mixins.scss";
 
 .form-container-wrapper {
   width: 100%;
@@ -6,6 +7,12 @@
   padding: 20px 50px 50px;
   text-align: center;
   z-index: 100;
+  @include is-extra-small-mobile {
+    padding: 20px;
+  }
+  @include is-mobile {
+    padding: 20px;
+  }
   h2,
   p {
     color: $primary;
