--- a/src/assets/sass/website/containers/job-details.scss
+++ b/src/assets/sass/website/containers/job-details.scss
@@ -3,14 +3,32 @@
 @import "../mixins.scss";
 
 .job-details-wrapper {
-  @include initializePageStyle;
+  // @include initializePageStyle;
   background-color: $accent;
-  padding-top: 80px;
-  margin-top: 25px;
+  // padding-top: 80px;
   border-radius: 10px;
+  width: 50%;
+  max-height: calc(100vh - #{$page-margin});
+  padding: 0 1%;
+  margin: auto;
+  @include is-extra-small-mobile {
+    overflow-y: auto;
+    margin-top: 20px;
+  }
+  @include is-mobile {
+    overflow-y: auto;
+    margin-top: 20px;
+  }
   &__container {
-    width: 90%;
-    margin: auto;
+    margin-top: 170px;
+    width: 100%;
+    // margin: auto;
+    @include is-extra-small-mobile {
+      margin-top: 10px;
+    }
+    @include is-mobile {
+      margin-top: 10px;
+    }
   }
   &__details {
     color: $primary;
@@ -23,13 +41,31 @@
     }
     h1 {
       font-size: 30px;
+      @include is-extra-small-mobile {
+        font-size: 1.3rem;
+      }
+      @include is-mobile {
+        font-size: 1.3rem;
+      }
     }
     h2 {
       font-size: 2rem;
       font-weight: bold;
+      @include is-extra-small-mobile {
+        font-size: 1.5rem;
+      }
+      @include is-mobile {
+        font-size: 1.5rem;
+      }
     }
     h3 {
       font-size: 30px;
+      @include is-extra-small-mobile {
+        font-size: 1.3rem;
+      }
+      @include is-mobile {
+        font-size: 1.3rem;
+      }
     }
     p {
       line-height: 30px;
