--- a/src/assets/sass/website/containers/services-details.scss
+++ b/src/assets/sass/website/containers/services-details.scss
@@ -3,60 +3,94 @@
 @import "../mixins.scss";
 
 .services-details-wrapper {
-  background-color: $primary;
-  height: max-content;
-  margin-top: -$header-height;
-  min-height: 100vh;
+  // background-color: $primary;
+  // height: max-content;
+  // margin-top: -$header-height;
+  // min-height: 100vh;
+  padding-top: $page-margin;
   @include is-mobile {
+    padding-top: $page-margin-mob;
     margin-top: -$header-height-mobile - 45;
     min-height: calc(100vh - #{$footer-height-mobile});
   }
   @include is-extra-small-mobile {
+    padding-top: $page-margin-mob;
     margin-top: -75px;
   }
   &__cover-container {
     width: 100%;
-    max-height: 730px;
-    overflow: hidden;
+    max-height: calc(100vh - #{$page-margin});
+    padding: 0 calc(calc(100% - #{$modal-width}) / 2);
+    // min-height: 30px;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     color: $header-item;
+    z-index: 20;
+    &::-webkit-scrollbar {
+      width: 5px !important;
+      background-color: $primary !important;
+      border-radius: 20px !important;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: $accent !important;
+      border-radius: 20px !important;
+    }
+    @include is-mobile {
+      max-height: calc(100vh - #{$page-margin-mob});
+      padding: 0 calc(calc(100% - #{$modal-width-mob}) / 2);
+    }
+    @include is-extra-small-mobile {
+      max-height: calc(100vh - #{$page-margin-mob});
+      padding: 0 calc(calc(100% - #{$modal-width-mob}) / 2);
+    }
     img {
-      width: 100%;
+      width: 80%;
+      margin: auto;
+      display: block;
       object-fit: cover;
-      filter: brightness(50%);
+      height: calc(94vh - #{$page-margin});
+      // filter: brightness(50%);
       @include is-extra-small-mobile {
         min-height: 400px;
+        height: calc(94vh - #{$page-margin-mob});
       }
       @include is-mobile {
         min-height: 400px;
+        height: calc(94vh - #{$page-margin-mob});
       }
     }
-    h1 {
-      position: absolute;
-      font-family: Arial;
-      font-weight: bold;
-      top: 45%;
-      @include is-extra-small-mobile {
-        font-size: 1.8rem;
-      }
-      @include is-mobile {
-        font-size: 1.8rem;
-      }
-      @include is-tablet {
-        font-size: 2rem;
-      }
-      @include is-desktop {
-        font-size: 2rem;
-      }
-    }
+    // h1 {
+    //   position: absolute;
+    //   font-family: Arial;
+    //   font-weight: bold;
+    //   top: 45%;
+    //   @include is-extra-small-mobile {
+    //     font-size: 1.8rem;
+    //   }
+    //   @include is-mobile {
+    //     font-size: 1.8rem;
+    //   }
+    //   @include is-tablet {
+    //     font-size: 2rem;
+    //   }
+    //   @include is-desktop {
+    //     font-size: 2rem;
+    //   }
+    // }
     p {
-      position: absolute;
       text-align: center;
-      top: 60%;
-      font-size: 1.2rem;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      width: 50%;
       @include is-extra-small-mobile {
         top: 60%;
         font-size: 0.8rem;
@@ -93,6 +127,40 @@
     }
     @include is-large-desktop {
       width: 90%;
+    }
+  }
+  &__title {
+    font-family: Arial;
+    font-weight: bold;
+    width: 80%;
+    // margin: auto;
+    margin-left: 12%;
+    text-align: left;
+    font-size: 1.5rem;
+    // z-index: 20;
+    @include is-extra-small-mobile {
+      font-size: 1.5rem;
+    }
+    @include is-mobile {
+      font-size: 1.8rem;
+    }
+    @include is-tablet {
+      font-size: 2rem;
+    }
+    @include is-desktop {
+      font-size: 2rem;
+    }
+  }
+  &__sections {
+    background-color: $accent;
+    width: 80%;
+    margin: auto;
+    border-radius: 10px;
+    @include is-extra-small-mobile {
+      width: 100%;
+    }
+    @include is-mobile {
+      width: 100%;
     }
   }
 }
