--- a/src/assets/sass/website/containers/work-details.scss
+++ b/src/assets/sass/website/containers/work-details.scss
@@ -3,10 +3,11 @@
 @import "../mixins.scss";
 
 .work-details-wrapper {
-  background-color: $primary;
-  height: max-content;
+  // background-color: $primary;
+  // height: max-content;
   // margin-top: -$header-height;
-  min-height: 100vh;
+  // min-height: 100vh;
+  padding-top: $page-margin;
   @include is-mobile {
     margin-top: -$header-height-mobile - 45;
     min-height: calc(100vh - #{$footer-height-mobile});
@@ -16,16 +17,26 @@
   }
   &__cover-container {
     width: 100%;
-    max-height: 730px;
-    min-height: 30px;
-    overflow: hidden;
+    max-height: calc(100vh - #{$page-margin});
+    padding: 0 calc(calc(100% - #{$modal-width}) / 2);
+    // min-height: 30px;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
-    width: 80%;
     margin: auto;
     // display: flex;
     // justify-content: center;
     // align-items: center;
     color: $header-item;
+    &::-webkit-scrollbar {
+      width: 5px !important;
+      background-color: $primary !important;
+      border-radius: 20px !important;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: $accent !important;
+      border-radius: 20px !important;
+    }
     img {
       width: 100%;
       object-fit: cover;
@@ -41,10 +52,11 @@
       font-family: Arial;
       font-weight: bold;
       width: 80%;
-      margin: auto;
-      margin-top: 1%;
+      // margin: auto;
+      margin-left: 12%;
       text-align: left;
       font-size: 1.5rem;
+      margin-bottom: 0;
       @include is-extra-small-mobile {
         font-size: 1.5rem;
       }
