--- a/src/assets/sass/website/containers/work.scss
+++ b/src/assets/sass/website/containers/work.scss
@@ -3,7 +3,10 @@
 @import "../mixins.scss";
 
 .work-wrapper {
-  background-color: $accent;
+  // background-color: $accent;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-top: -120px;
   padding-top: 120px;
 }
