--- a/src/assets/sass/website/variables.scss
+++ b/src/assets/sass/website/variables.scss
@@ -13,7 +13,7 @@ $total-border-thickness: 2px;
 
 $transition-time: 0.3s;
 
-$input-form-height: 50px;
+$input-form-height: 40px;
 
 $half-clipped-shape-padding: 20px;
 
@@ -23,4 +23,12 @@ $hero-image-height: 248px;
 $half-page-hero-image-height: 60vh;
 
 $slide-height: 180px;
+$slide-height-mobile: 300px;
+
 $about-container-height: 220px;
+
+$modal-width: 72%;
+$modal-width-mob: 80%;
+
+$page-margin: 120px;
+$page-margin-mob: 80px;
