restyle some styles

--- a/src/assets/sass/website/components/about/about-clients-data.scss
+++ b/src/assets/sass/website/components/about/about-clients-data.scss
@@ -12,8 +12,8 @@
   &__image {
     object-fit: contain;
     padding: 30px;
-    width: 70%;
-    max-width: 160px;
+    // width: 70%;
+    max-width: 180px;
     max-height: 140px;
     margin: auto;
     cursor: pointer;
