--- a/src/assets/sass/website/components/jobs/job-form.scss
+++ b/src/assets/sass/website/components/jobs/job-form.scss
@@ -37,7 +37,7 @@
         text-align: left;
         color: white;
         width: 100%;
-        margin-left: 20px;
+        // margin-left: 20px;
       }
       &__short-label {
         width: 60px;
@@ -114,7 +114,7 @@
     border: 1px $blue-stroke solid;
     outline: none;
     padding: 7px 12px;
-    box-shadow: 0 0 10px $blue-stroke;
+    box-shadow: 0 0 3px $blue-stroke;
     a {
       color: $black-text;
       width: 100%;
@@ -155,7 +155,7 @@
     border: 1px $blue-stroke solid;
     outline: none;
     padding: 7px 12px;
-    box-shadow: 0 0 10px $blue-stroke;
+    box-shadow: 0 0 3px $blue-stroke;
     text-align: center !important;
     @include is-extra-small-mobile {
       bottom: 0;
