--- a/src/assets/sass/website/components/work/work-details.scss
+++ b/src/assets/sass/website/components/work/work-details.scss
@@ -6,6 +6,7 @@
   width: 80%;
   margin: auto;
   color: $header-item;
+  background-color: $primary;
   @include is-extra-small-mobile {
     width: 90%;
   }
@@ -13,10 +14,10 @@
     width: 90%;
   }
   &__section {
-    padding: 2% 0 0;
-    &:last-child {
-      padding: 2% 0 2%;
-    }
+    // padding: 2% 0 0;
+    // &:last-child {
+    //   padding: 2% 0 2%;
+    // }
   }
 }
 .service-details-sections {
