--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -6,7 +6,7 @@
   @include initializePageStyle;
   position: relative;
   &__bg {
-    width: 69.8%;
+    width: 70vw;
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
