--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -26,16 +26,16 @@ body {
 
 .app-wrapper {
   height: 100%;
-  width: 70%;
+  width: 70vw;
   margin: 0 auto;
   &__admin {
-    width: 100% !important;
+    width: 100vw !important;
   }
   @include is-extra-small-mobile {
-    width: 100%;
+    width: 100vw;
   }
   @include is-mobile {
-    width: 100%;
+    width: 100vw;
   }
 }
 .vue-notifyjs.notifications {
