--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -7,7 +7,7 @@ $left: 25px;
 $shift: 40px;
 
 $extra-lg-dim: calc(#{$slide-height} + #{$shift});
-$extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
+$extra-mob-dim: $slide-height-mobile;
 
 .services-carousel {
   padding-bottom: 0;
@@ -48,22 +48,18 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
       top: 0;
       left: 0;
     }
-    // @include is-tablet {
-    //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   height: 100%;
-    // }
-    // @include is-desktop {
-    //   position: relative;
-    //   height: 100%;
-    // }
-    // @include is-large-desktop {
-    //   height: 100%;
-    // }
-    // @include is-extra-large-desktop {
-    //   margin-top: -$shift/2;
-    // }
+    @include is-tablet {
+      margin-top: -$shift/2;
+    }
+    @include is-desktop {
+      margin-top: -$shift/2;
+    }
+    @include is-large-desktop {
+      margin-top: -$shift/2;
+    }
+    @include is-extra-large-desktop {
+      margin-top: -$shift/2;
+    }
   }
   &__img {
     object-fit: cover;
@@ -75,23 +71,15 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
     // top: 0;
     @include is-extra-small-mobile {
       position: relative;
-      width: 100%;
-      height: 100%;
       height: $extra-mob-dim;
-      width: $extra-mob-dim + 50px;
-      max-width: $extra-mob-dim + 50px;
-      min-width: $extra-mob-dim;
-      filter: brightness(50%);
+      width: 100%;
+      filter: brightness(20%);
     }
     @include is-mobile {
       position: relative;
-      width: 100%;
-      height: 100%;
       height: $extra-mob-dim;
-      width: $extra-mob-dim + 50px;
-      max-width: $extra-mob-dim + 50px;
-      min-width: $extra-mob-dim;
-      filter: brightness(50%);
+      width: 100%;
+      filter: brightness(20%);
     }
     // @include is-mobile {
     //   position: relative;
@@ -117,9 +105,7 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
     // }
     @include is-extra-large-desktop {
       height: $extra-lg-dim;
-      width: $extra-lg-dim + 50px;
-      max-width: $extra-lg-dim + 50px;
-      min-width: $extra-lg-dim;
+      width: calc(#{$extra-lg-dim} + 150px);
     }
     @media (min-width: 1400px) and (max-width: 1599px) {
       // height: 100%;
@@ -143,7 +129,7 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
       height: 100vh;
       left: -23%;
       transform: scale(1.1);
-      filter: brightness(30%);
+      filter: brightness(20%);
     }
     @include is-mobile {
       padding-right: 0px;
@@ -152,7 +138,7 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
       left: -23%;
       transform: scale(1.1);
       height: 100%;
-      filter: brightness(30%);
+      filter: brightness(20%);
     }
     @include is-tablet {
       padding-right: 0px;
@@ -216,7 +202,7 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
     margin-top: 10px;
     position: absolute;
     top: 60px;
-    left: $left;
+    right: 0;
     color: $white-text;
     z-index: 10;
     padding-right: 10px;
@@ -254,12 +240,12 @@ $extra-mob-dim: calc(#{$slide-height-mobile} + #{$shift});
     border-radius: 5px;
     border: 1px $blue-stroke solid;
     outline: none;
-    box-shadow: 0 0 10px $blue-stroke;
+    box-shadow: 0 0 3px $blue-stroke;
     @include is-extra-small-mobile {
-      bottom: -10px;
+      bottom: 15px;
     }
     @include is-mobile {
-      bottom: -10px;
+      bottom: 15px;
     }
   }
 }
