fix some styles

--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -36,6 +36,7 @@ $extra-mob-dim: $slide-height-mobile;
   }
   &__img-wrapper {
     text-align: right;
+    z-index: 200;
     @include is-extra-small-mobile {
       height: 100%;
       position: absolute;
