--- a/src/assets/sass/website/containers/work-details.scss
+++ b/src/assets/sass/website/containers/work-details.scss
@@ -17,8 +17,8 @@
   }
   &__cover-container {
     width: 100%;
-    max-height: calc(100vh - #{$page-margin});
-    padding: 0 calc(calc(100% - #{$modal-width}) / 2);
+    max-height: calc(100vh - #{$page-margin + 40px});
+    // padding: 0 calc(calc(100% - #{$modal-width}) / 2);
     // min-height: 30px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -32,10 +32,12 @@
       width: 5px !important;
       background-color: $primary !important;
       border-radius: 20px !important;
+      display: none;
     }
     &::-webkit-scrollbar-thumb {
       background-color: $accent !important;
       border-radius: 20px !important;
+      display: none;
     }
     img {
       width: 100%;
@@ -58,6 +60,7 @@
       text-align: left;
       font-size: 1.5rem;
       margin-bottom: 5px;
+      color: white;
       @include is-extra-small-mobile {
         font-size: 1.5rem;
       }
