--- a/src/assets/sass/website/containers/work.scss
+++ b/src/assets/sass/website/containers/work.scss
@@ -5,8 +5,8 @@
 .work-wrapper {
   // background-color: $accent;
   background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
   margin-top: -120px;
   padding-top: 120px;
 }
