adjust our work background and videos border

--- a/src/assets/sass/website/containers/work.scss
+++ b/src/assets/sass/website/containers/work.scss
@@ -4,7 +4,7 @@
 
 .work-wrapper {
   // background-color: $accent;
-  background-position: center center;
+  background-position: center center !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
   margin-top: -120px;
