adjust special sections border radius

--- a/src/assets/sass/website/components/about/about-clients-data.scss
+++ b/src/assets/sass/website/components/about/about-clients-data.scss
@@ -42,8 +42,8 @@
   }
   &__rightline,
   &__leftline {
-    width: 1%;
-    height: 80%;
+    width: 2px;
+    height: 60%;
     margin: auto 0;
     background-color: white;
     // margin-top: -50px;
