--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -120,7 +120,7 @@
     width: 100%;
     margin: auto;
     user-select: none;
-    padding: 15px 0 100px 15px;
+    padding: 15px 0 15px;
     position: relative;
     background-color: $accent;
     z-index: 102;
