--- a/src/assets/sass/website/shared/hero.scss
+++ b/src/assets/sass/website/shared/hero.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   z-index: 101;
+  background-color: rgba(0, 0, 0, 0.5);
   @include cover-image();
   @include is-extra-small-mobile {
     padding-top: $header-height-mobile;
