--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -107,6 +107,7 @@
   &__bg {
     width: 70vw;
     height: 100vh;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
