--- a/src/assets/sass/website/containers/contact.scss
+++ b/src/assets/sass/website/containers/contact.scss
@@ -11,6 +11,7 @@
   &__bg {
     width: 70vw;
     height: 100vh;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
