--- a/src/assets/sass/website/components/about/about-clients-data.scss
+++ b/src/assets/sass/website/components/about/about-clients-data.scss
@@ -11,29 +11,10 @@
 
   &__image {
     object-fit: contain;
-    padding: 30px;
-    // width: 70%;
-    max-width: 180px;
-    max-height: 140px;
-    margin: auto;
+    width: 56%;
+    max-height: 80px;
+    margin: 10% 22%;
     cursor: pointer;
-    @include is-large-desktop {
-      width: 70%;
-    }
-    @include is-desktop {
-      width: 80%;
-    }
-    @include is-tablet {
-      width: 90%;
-    }
-    @include is-mobile {
-      width: 90%;
-      padding: 15px;
-    }
-    @include is-extra-small-mobile {
-      width: 80%;
-      padding: 10px;
-    }
   }
   .hide-border {
     // margin-top: 0;
