--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -34,7 +34,7 @@ $carousel-height: 500px;
     &__title {
       color: $header-item;
       font-family: Arial;
-    font-weight: bold;
+      font-weight: bold;
       font-size: 2.6rem;
       letter-spacing: 4px;
     }
@@ -180,7 +180,7 @@ $carousel-height: 500px;
     }
     &__title {
       font-family: Arial;
-    font-weight: bold;
+      font-weight: bold;
       font-size: 2.4rem;
       height: max-content;
       width: 60%;
@@ -494,5 +494,9 @@ $widths-and-heights: (
 
 // use /deep/ to apply scss classes to the child components
 div /deep/ {
-  @include filled-half-clipped-shape($widths-and-heights, transparent);
+  @include filled-half-clipped-shape(
+    $widths-and-heights,
+    transparent,
+    $green-stroke
+  );
 }
