--- a/src/assets/sass/website/components/about/about-section-data.scss
+++ b/src/assets/sass/website/components/about/about-section-data.scss
@@ -28,7 +28,7 @@ $text-minheight-pc: 706px;
     justify-content: center;
   }
   &__inside {
-    padding: 50px 0px;
+    padding: 15px 0px;
     width: 80%;
     margin: auto;
     &--is-text {
@@ -107,12 +107,31 @@ $text-minheight-pc: 706px;
     }
   }
   &__title {
-    font-family: "Arial Bold";
+    font-family: "Arial Bold" !important;
     font-weight: bolder;
     font-size: 2rem;
-    letter-spacing: 4px;
-    margin-bottom: -15px;
+    // letter-spacing: 4px;
+    margin-bottom: -20px;
+    // width: 100%;
     margin-left: 30px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    &--center {
+      text-align: center;
+      padding-bottom: 20px;
+      width: 100%;
+      margin-left: 0;
+      padding-top: 50px;
+      // margin-bottom: 0;
+    }
+    &--right {
+      text-align: right;
+      padding-bottom: 0px;
+      width: 100%;
+      padding-right: 50px;
+      margin-left: unset;
+      // margin-bottom: 0;
+    }
   }
   &__image {
     // object-fit: cover;
@@ -121,7 +140,8 @@ $text-minheight-pc: 706px;
     background-repeat: no-repeat;
     width: 100%;
     // height: 100%;
-    border-radius: 10px;
+    border-radius: 15px;
+    border: 2px $green-stroke solid;
     // position: absolute;
     // right: 0;
     // top: 0;
@@ -173,7 +193,46 @@ $text-minheight-pc: 706px;
     }
   }
   &__video {
-    height: $extra-lg-dim;
+    @include is-extra-small-mobile {
+      position: relative;
+      height: $extra-mob-dim;
+      width: $extra-mob-dim + 50px;
+      max-width: $extra-mob-dim + 50px;
+      min-width: $extra-mob-dim;
+      filter: brightness(50%);
+      margin-left: -12px;
+    }
+    @include is-mobile {
+      position: relative;
+      width: 95vw;
+      left: -23%;
+      transform: scale(1.1);
+      // height: 100%;
+      filter: brightness(30%);
+    }
+    @include is-tablet {
+      position: relative;
+      width: 95vw;
+      left: -23%;
+      transform: scale(1.1);
+      // height: 100%;
+      filter: brightness(30%);
+    }
+    @include is-desktop {
+      // height: 97%;
+    }
+    @include is-large-desktop {
+      // height: 98%;
+    }
+    @include is-extra-large-desktop {
+      height: $extra-lg-dim;
+      // width: calc(#{$extra-lg-dim} + 50px);
+      // width: 100%;
+      // max-width: 100%;
+      // min-width: 100%;
+      // max-width: calc(#{$extra-lg-dim} + 50px);
+      // min-width: $extra-lg-dim;
+    }
     video {
       border-radius: 10px;
       height: 100%;
@@ -185,8 +244,8 @@ $text-minheight-pc: 706px;
   }
   &__slider {
     display: flex;
-    align-items: center;
-    height: $extra-lg-dim;
+    // align-items: center;
+    height: fit-content;
     padding: 15px;
   }
   &__description {
@@ -196,18 +255,21 @@ $text-minheight-pc: 706px;
     //   overflow-y: auto;
     //   line-height: 33px;
     // }
-    padding: 20px 10px 20px 15px;
-    height: $about-container-height;
+    padding: 20px;
+    max-height: $about-container-height;
     margin-top: $shift/2;
-    background-color: $form-background;
+    background-color: $section-color;
+    border-bottom: 2px $green-stroke solid;
+    border-top: 2px $green-stroke solid;
+    border-left: 2px $green-stroke solid;
     text-align: left;
     font-family: Arial;
     // font-size: 1.2rem;
     line-height: 20px;
     // margin-top: 10px;
     color: $white-text;
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
     // min-height: $text-minheight-pc;
     // overflow: hidden;
     // overflow-y: auto;
