--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -20,10 +20,10 @@ $extra-mob-dim: $slide-height-mobile;
     }
     &__title {
       color: $black-text;
-      font-family: "Arial Bold";
+      font-family: "Arial Bold" !important;
       font-weight: bolder;
       font-size: 2rem;
-      letter-spacing: 4px;
+      // letter-spacing: 4px;
       margin-bottom: 0;
     }
     &__view-link {
@@ -67,6 +67,8 @@ $extra-mob-dim: $slide-height-mobile;
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    border: 2px $green-stroke solid;
+    margin-right: -2px;
     // position: absolute;
     // right: 0;
     // top: 0;
@@ -319,6 +321,7 @@ $extra-mob-dim: $slide-height-mobile;
   right: 2%;
   margin-top: 25px;
   z-index: 120;
+  z-index: 2000;
   @include is-extra-small-mobile {
     left: 1.5%;
     right: unset;
@@ -346,6 +349,7 @@ $extra-mob-dim: $slide-height-mobile;
   left: 1%;
   z-index: 120;
   width: 70%;
+  z-index: 2000;
   @include is-extra-small-mobile {
     left: 4%;
     width: 100%;
@@ -409,5 +413,9 @@ $widths-and-heights: (
 
 // use /deep/ to apply scss classes to the child components
 div /deep/ {
-  @include filled-half-clipped-shape($widths-and-heights, $form-background);
+  @include filled-half-clipped-shape(
+    $widths-and-heights,
+    $section-color,
+    $green-stroke
+  );
 }
