--- a/src/assets/sass/website/components/jobs/jobs-main-content.scss
+++ b/src/assets/sass/website/components/jobs/jobs-main-content.scss
@@ -33,8 +33,8 @@
     text-align: center;
     h1 {
       text-transform: uppercase;
-      font-family: Arial;
-      font-weight: bold;
+      font-family: "Arial Bold" !important;
+      // font-weight: bold;
       color: $header-item;
       height: fit-content;
       margin-top: 120px;
@@ -48,11 +48,11 @@
       }
     }
     p {
-      margin-top: 50px;
+      margin-top: 20px;
       color: $sub-text;
       //   width: 57%;
       text-align: center;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       //   @include is-large-desktop {
       //     width: 70%;
       //   }
@@ -84,7 +84,7 @@
     }
     &__content {
       display: flex;
-      background-color: $form-background;
+      background-color: $section-color;
       width: 100%;
       padding: 10px;
       margin: 6px;
@@ -101,11 +101,12 @@
       margin-top: 10px;
       color: $sub-text;
       font-size: 1.6rem;
+      font-family: "Arial" !important;
     }
     p {
+      font-family: "Arial" !important;
       color: $header-item;
-      font-family: Arial;
-      font-weight: bold;
+      // font-weight: bold;
       font-size: 1.8rem;
       margin-bottom: 0;
     }
