--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -31,10 +31,10 @@
     padding-top: 20px;
   }
   &__title {
-    font-family: "Arial Bold";
+    font-family: "Arial Bold" !important;
     font-weight: bold;
     font-size: 2rem;
-    letter-spacing: 4px;
+    // letter-spacing: 4px;
     margin-top: 0;
   }
   &__content {
